Add profile-pic storage capabilities
